# hamster

./: Cargo.toml  LICENSE  README.md
src/: address.rs  address_cache.rs  diff.rs  folder_tags.rs  index.rs  index_access.rs  index_core.rs  index_maildir.rs  index_metadata.rs  index_text.rs  main.rs  search.rs  setup.rs  stats.rs  tag.rs  tests_correctness.rs  validation.rs
src/tui/: events.rs  mod.rs  state.rs  ui.rs
tests/: integration_test.rs
