[package]
name = "hamster"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tantivy = "=0.22.1"
mail-parser = "0.10"
walkdir = "2.5"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
env_logger = "0.11"
glob = "0.3"
strsim = "0.11"
log = "0.4"
indicatif = "0.17"
dialoguer = "0.11"
fuzzy-matcher = "0.3"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
ratatui = "0.28"
crossterm = "0.28"
html-safe-md = "0.0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
